fix align of the img

--- a/css-flexbox/css-flexbox_profile/css/styles.css
+++ b/css-flexbox/css-flexbox_profile/css/styles.css
@@ -19,17 +19,13 @@ body {
   flex-direction: column;
 }
 
-.profile .profile__image {
-  display: block;
-  margin: auto;
-}
-
 .profile__image {
   object-fit: cover;
   border-radius: 999px;
   aspect-ratio: 1 / 1;
   border: solid black 1px;
   max-width: 50%;
+  align-self: center;
 }
 
 .tech-stack__list {
